0.31-a1: Fixes ecliptic, galactic etc projections, some new features   like preliminary interferometry analysis tools, and WeightedPoint math functions...