@@ -23,7 +23,10 @@
 
 package jnum.data.mesh;
 
+import java.lang.reflect.InvocationTargetException;
 import java.text.ParsePosition;
+
+import com.sun.jdi.InvocationException;
 
 import jnum.Copiable;
 import jnum.text.Parser;
@@ -79,8 +82,8 @@ public class ObjectMesh<T> extends Mesh<T> {
 	 * @see kovacs.data.AbstractArray#parseElement(java.lang.String)
 	 */
 	@Override
-	public T parseElement(String text) throws ClassCastException, InstantiationException, IllegalAccessException  {
-		T value = elementClass.newInstance();
+	public T parseElement(String text) throws InstantiationException, InvocationException, InvocationTargetException, NoSuchMethodException, IllegalAccessException  {
+		T value = elementClass.getDeclaredConstructor().newInstance();
 		((Parser) value).parse(text, new ParsePosition(0));
 		return value;
 	}
